overflow corrected

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 * {
     margin: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 html {
